--- a/main.html
+++ b/main.html
@@ -15,7 +15,7 @@
             <nav class="flex justify-around items-center">
                 <img class="w-16" src="./assets/Group.png" alt="">
                 <div>
-                    <h1 class="text-3xl">$45000</h1>
+                    <h1 class="text-3xl font-bold">$<span id="main-balance">45000</span></h1>
                     <p class="border rounded p-1">Avaliable balance</p>
                 </div>
                 <button>Logout</button>
@@ -68,11 +68,14 @@
                                         <label class="label">Account Number</label>
                                         <input value="01234567891" id="account-number" type="number" class="input"
                                             placeholder="Account Number" required />
+                                        <label class="label">Amount</label>
+                                        <input id="amount" id="account-number" type="number" class="input"
+                                            placeholder="Type your Amount" required />
                                         <label class="label">PIN</label>
                                         <input value="1234" id="pin" type="text" class="input" placeholder="PIN"
                                             requiredf />
                                         <div><a class="link link-hover">Forgot password?</a></div>
-                                        <button id="login-btn" class="btn btn-neutral bg-blue-700 border-none mt-4">Login</button>
+                                        <button id="add-money" type="submit" id="login-btn" class="btn btn-neutral bg-blue-700 border-none mt-4">Add Money</button>
                                     </fieldset>
                                 </div>
                             </div>
@@ -89,7 +92,7 @@
             </section>
         </header>
     </section>
-
+    <script src="./script/addMoney.js"></script>
 </body>
 
 </html>
