--- a/main.html
+++ b/main.html
@@ -24,12 +24,12 @@
                 <h1 class="text-2xl font-bold mb-2">Welcome to Payoo!</h1>
                 <p>Enjoy easy and convenient financial services with us. Cashout charge is low and </p>
 
-                <div class="cards grid grid-cols-3 mt-14 gap-2 p-2">
-                    <div class="box border ml-2 mr-2 rounded-md p-4 text-center">
+                <div class="cards grid grid-cols-3 mt-14 gap-2 p-2 ">
+                    <div id="add-money-box" class="box border ml-2 mr-2 rounded-md p-4 text-center">
                         <img class="w-8 mx-auto " src="./assets/wallet1.png" alt="">
                         <h3>Add Money</h3>
                     </div>
-                    <div class="box border ml-2 mr-2 rounded-md p-4 text-center">
+                    <div id="cash-out-box" class="box border ml-2 mr-2 rounded-md p-4 text-center">
                         <img class="w-8 mx-auto " src="./assets/send1.png" alt="">
                         <h3>Cashout</h3>
                     </div>
@@ -51,8 +51,8 @@
                     </div>
                 </div>
 
-                <section>
-                    <h2>Add Money</h2>
+                <section id="add-money" class="">
+                    <h2 class="text-center mt-5 font-bold bg-slate-500 text-2xl rounded-sm pr-5 pl-5 mr-5 ml-5 justify-center">Add Money</h2>
                     <div class="">
                         <div class="hero-content flex-col lg:flex-row-reverse">
                             <div class="card w-full max-w-sm shrink-0 shadow-2xl">
@@ -75,7 +75,8 @@
                                         <input value="1234" id="pin" type="text" class="input" placeholder="PIN"
                                             requiredf />
                                         <div><a class="link link-hover">Forgot password?</a></div>
-                                        <button id="add-money" type="submit" id="login-btn" class="btn btn-neutral bg-blue-700 border-none mt-4">Add Money</button>
+                                        <button id="add-money" type="submit" id="login-btn"
+                                            class="btn btn-neutral bg-blue-700 border-none mt-4">Add Money</button>
                                     </fieldset>
                                 </div>
                             </div>
@@ -83,16 +84,50 @@
                     </div>
                 </section>
 
-
-
-
-
-
-
+                <section id="cashout">
+                    <h2 class="text-center justify-center text-2xl bg-slate-400 mr-5 ml-5 rounded-sm mt-10 font-bold">Cash Out</h2>
+                    <div class="">
+                        <div class="hero-content flex-col lg:flex-row-reverse">
+                            <div class="card w-full max-w-sm shrink-0 shadow-2xl">
+                                <div class="card-body">
+                                    <legend>Select Bank</legend>
+                                    <select class="select">
+                                        <option disabled selected>Select Bank</option>
+                                        <option value="Bkash">Bkash</option>
+                                        <option value="Nagad">Nagad</option>
+                                        <option value="DBBL">DBBL</option>
+                                    </select>
+                                    <fieldset class="fieldset">
+                                        <label class="label">Account Number</label>
+                                        <input value="01234567891" id="account-number" type="number" class="input"
+                                            placeholder="Account Number" required />
+                                        <label class="label">Amount</label>
+                                        <input id="cashout-amount" id="account-number" type="number" class="input"
+                                            placeholder="Type your Amount" required />
+                                        <label class="label">PIN</label>
+                                        <input value="1234" id="cashout-pin" type="text" class="input" placeholder="PIN"
+                                            requiredf />
+                                        <div><a class="link link-hover">Forgot password?</a></div>
+                                        <button id="cashout-btn" type="submit" id="login-btn"
+                                            class="btn btn-neutral bg-blue-700 border-none mt-4">Cash Out</button>
+                                    </fieldset>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
             </section>
-        </header>
+
+
+
+
+
+    </section>
+    </header>
     </section>
     <script src="./script/addMoney.js"></script>
+    <script src="./script/toggle.js"></script>
+    <script src="./script/cashout.js"></script>
 </body>
 
 </html>
