--- a/test/test.html
+++ b/test/test.html
@@ -7,7 +7,15 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
 </head>
-<body>
-    
+<body class="p-10">
+    <button id="bangladesh-btn" class="btn">Bangladesh</button>
+    <button id="usa-btn" class="btn">USA</button>
+
+    <div class="flex justify-center gap-20">
+        <p id="usa">USA</p>
+        <P id="bd">Bangladesh</P>
+    </div>
+
+    <script src="./test.js"></script>
 </body>
 </html>
