add utilities file

--- a/main.html
+++ b/main.html
@@ -5,8 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main</title>
+    
     <link href="https://cdn.jsdelivr.net/npm/daisyui@5" rel="stylesheet" type="text/css" />
     <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+    <link rel="icon" type="image/x-icon" href="./assets/FABICON.png">
+
 </head>
 
 <body class="bg-slate-800">
@@ -125,9 +128,11 @@
     </section>
     </header>
     </section>
-    <script src="./script/addMoney.js"></script>
-    <script src="./script/toggle.js"></script>
-    <script src="./script/cashout.js"></script>
+    <script src="./utilities/utilities.js"></script>
+    <!-- <script src="./script/addMoney.js"></script> -->
+    <!-- <script src="./script/toggle.js"></script> -->
+    <!-- <script src="./script/cashout.js"></script> -->
+    <script src="./script/dryFunction.js"></script>
 </body>
 
 </html>
